1.4.6
- bumped required Factorio version to current stable
- fixed: Dispatcher picked trains closesest to request stop instead of providing stop

1.4.5
- removed left over debug message

1.4.4
- fixed: deliveries where not properly reserved
- performance optimizations

1.4.3
- fixed nil reference when no providers are available

1.4.2
- internally store train capacity for faster access when searching available trains
- rewritten Dispatcher logic

1.4.1
- fixed: Items where not removed from providers after being added to an order
- fixed: orders where merged between different requester

1.4.0
- Dispatcher goes through requests by age of requests/item instead of requests/stop
- Dispatcher is no longer limited to 1 train/s
- spread dispatcher update over 3 ticks

1.3.5
- removed "log level" and "log output" settings
- added "message level" for console messages only (no level 4: debug)
- added "write debug logfile" checkbox for debug log generation into factorio-current.log
- changed provider prioritisation making deliveries merge more reliably (#trains > provider priority > #existing deliveries from provider > amount)
- fixed potential nil reference during stop update

1.3.4
- code cleanup
- train state change and train created events are only if LTN stops exist

1.3.3
- automatically set output combinator limit
- exceeding output slot size results in some signals being not generated by the output and a console message

1.3.2
- Chinese translation
- fixed error with no longer existing items #43

1.3.1
- added force to deliveries
- added support for force merging

1.3.0
- added Request Threshold and Provide Threshold
- removed Minimum Delivery Size and Ignore Minimum Delivery Size
- removed Best Effort, Provide Threshold = 1 does the same now
- added Disable Warnings Messages control signal #34
- limit messages to force where possible #40
- added workaround for fluid wagon residue #31
- removed toggle to loading list, stops only show expected inventory after loading
