@@ -50,8 +50,12 @@ local function initialize(oldVersion, newVersion)
   ---- initialize logger
   global.messageBuffer = {}
 
+  ---- initialize global lookup tables
+  global.stopIdStartIndex = global.stopIdStartIndex or 1 --start index for on_tick stop updates
   global.StopDistances = global.StopDistances or {} -- station distance lookup table
-  global.stopIdStartIndex = global.stopIdStartIndex or 1 --global index should prevent desync by updating different stops
+  global.WagonCapacity = { --preoccupy table with wagons to ignore at 0 capacity
+    ["rail-tanker"] = 0
+  }
 
   ---- initialize Dispatcher
   global.Dispatcher = global.Dispatcher or {}
@@ -1609,10 +1613,6 @@ end
 ---------------------------------- HELPER FUNCTIONS ----------------------------------
 
 do --GetTrainCapacity(train)
-local WagonCapacity = { --preoccupy table with wagons to ignore at 0 capacity
-  ["rail-tanker"] = 0
-}
-
 local function getWagonCapacity(entity)
   local capacity = 0
   if entity.type == "cargo-wagon" then
@@ -1622,7 +1622,7 @@ local function getWagonCapacity(entity)
       capacity = capacity + entity.fluidbox.get_capacity(n)
     end
   end
-  WagonCapacity[entity.name] = capacity
+  global.WagonCapacity[entity.name] = capacity
   return capacity
 end
 
@@ -1634,7 +1634,7 @@ function GetTrainCapacity(train)
     --log("Train "..GetTrainName(train).." carriages: "..#train.carriages..", cargo_wagons: "..#train.cargo_wagons)
     for _,wagon in pairs (train.carriages) do
       if wagon.type ~= "locomotive" then
-        local capacity = WagonCapacity[wagon.name] or getWagonCapacity(wagon)
+        local capacity = global.WagonCapacity[wagon.name] or getWagonCapacity(wagon)
         if wagon.type == "fluid-wagon" then
           fluidCapacity = fluidCapacity + capacity
         else
